feat: build basic class